; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ctxfi/extr_cthw20k1.c_hw_is_adc_input_selected.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ctxfi/extr_cthw20k1.c_hw_is_adc_input_selected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hw = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hw*, i32)* @hw_is_adc_input_selected to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hw_is_adc_input_selected(%struct.hw* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.hw*, align 8
  %5 = alloca i32, align 4
  store %struct.hw* %0, %struct.hw** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.hw*, %struct.hw** %4, align 8
  %7 = getelementptr inbounds %struct.hw, %struct.hw* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %21 [
    i32 130, label %9
    i32 129, label %13
    i32 128, label %17
  ]

9:                                                ; preds = %2
  %10 = load %struct.hw*, %struct.hw** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @is_adc_input_selected_SB055x(%struct.hw* %10, i32 %11)
  store i32 %12, i32* %3, align 4
  br label %25

13:                                               ; preds = %2
  %14 = load %struct.hw*, %struct.hw** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @is_adc_input_selected_hendrix(%struct.hw* %14, i32 %15)
  store i32 %16, i32* %3, align 4
  br label %25

17:                                               ; preds = %2
  %18 = load %struct.hw*, %struct.hw** %4, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @is_adc_input_selected_hendrix(%struct.hw* %18, i32 %19)
  store i32 %20, i32* %3, align 4
  br label %25

21:                                               ; preds = %2
  %22 = load %struct.hw*, %struct.hw** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @is_adc_input_selected_SBx(%struct.hw* %22, i32 %23)
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %21, %17, %13, %9
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @is_adc_input_selected_SB055x(%struct.hw*, i32) #1

declare dso_local i32 @is_adc_input_selected_hendrix(%struct.hw*, i32) #1

declare dso_local i32 @is_adc_input_selected_SBx(%struct.hw*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
